# etl-framework

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: README.md  build-release.yml  demo-validation.yml  security-audit.yml  test-suite.yml
demo/: .env.example  01_basic_csv_etl.py  02_secure_csv_etl.py  03_pdf_extraction.py  04_database_operations.py  05_comprehensive_security.py  06_json_business_logic.py  07_audit_logging_demo.py  08_rbac_demo.py  09_encryption_demo.py  10_end_to_end_scenario.py
demo/config/: custom_business_logic.json  customer_mapping.json  financial_mapping.json  production_analytics_mapping.json  production_customer_mapping.json  production_order_mapping.json  roller_door_mapping.json
demo/data/: additional_orders.csv  customers.csv  initial_orders.csv  orders.csv  production_customers.csv  production_orders.csv  production_products.csv  sensitive_customer_data.csv  update_single_order.csv  updated_orders.csv
docs/: API_REFERENCE.md  CHANGELOG.md  CI_CD_GUIDE.md  DEMO_QUICK_START.md  DEVELOPER_GUIDE.md  EXAMPLES.md  GETTING_STARTED.md  INDEX.md  SECURITY_GUIDE.md  USER_GUIDE.md
examples/: __init__.py  basic_usage.py  security_demo.py
scripts/: demo_manager.py  requirements-audit.txt  sbom_generator.py  security_audit.py  security_suite.py  test_runner.py
src/etl_framework/: __init__.py
src/etl_framework/cli/: __init__.py  __main__.py  main.py
src/etl_framework/config/: __init__.py  settings.py
src/etl_framework/core/: __init__.py  extractor.py  load_strategy.py  loader.py  pipeline.py  transformer.py
src/etl_framework/plugins/: __init__.py
src/etl_framework/plugins/extractors/: __init__.py  csv_extractor.py  excel_extractor.py  json_extractor.py  pdf_extractor.py
src/etl_framework/plugins/loaders/: __init__.py  file_loader.py  sql_loader.py
src/etl_framework/plugins/transformers/: __init__.py  cleaner.py  enricher.py  mapping_loader.py  secure_json_calculator.py
src/etl_framework/security/: __init__.py  access_control.py  audit_logger.py  config.py  encryption.py  input_validator.py
src/etl_framework/utils/: __init__.py  logger.py  validators.py
tests/: __init__.py  conftest.py
tests/fixtures/config/: environment.py
tests/fixtures/data/: test_data_factory.py
tests/fixtures/helpers/: test_helpers.py
tests/fixtures/mocks/: mock_factory.py
tests/functional/workflows/: test_business_workflow.py
tests/integration/: test_json_pipeline_integration.py
tests/integration/pipeline/: test_json_pipeline_integration.py  test_pipeline_integration.py
tests/unit/core/: test_pipeline_unit.py
tests/unit/extractors/: test_json_extractor.py
tests/unit/security/: test_encryption_unit.py  test_json_validation.py
